# thymio-ros2-bridge

./: .gitignore  DEV_TOOLS.md  LICENSE  README.md  env.bash  ros2_cheat_sheet.md
install/thymioII_pkg/share/thymioII_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/: THYMIO.md
ros2_ws/src/thymio2_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/thymio2_interfaces/srv/: Thymio2ControllerSrv.srv
ros2_ws/src/thymio2_ros2_bridge_py_pkg/: package.xml
ros2_ws/src/thymio2_ros2_tutorials_py_pkg/: package.xml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/thymio2_bringup/share/thymio2_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
src/thymio2_ROS2_bridge_py_pkg/: package.xml  setup.cfg  setup.py
src/thymio2_ROS2_bridge_py_pkg/thymio2_ROS2_bridge_py_pkg/: thymio2_controler_node.py
src/thymio2_bringup/: package.xml
src/thymio2_interfaces/: CMakeLists.txt  package.xml
src/thymio2_interfaces/msg/: Thymio2Controller.msg
src/thymio2_interfaces/srv/: Thymio2MotorSrv.srv
src/thymio2_ros2_bridge_py_pkg/: setup.cfg  setup.py
src/thymio2_ros2_bridge_py_pkg/thymio2_ros2_bridge_py_pkg/: thymio2_controler_node.py  thymio2_monitor_node.py
src/thymio2_ros2_tutorials_py_pkg/: README.md  setup.py
src/thymio2_ros2_tutorials_py_pkg/thymio2_ros2_tutorials_py_pkg/: thymio2_followme_node.py
tutorials/: 01_test_dbus_connection.py  test-ext-events.py  test-medulla.aesl  test-medulla.py
(+50 files in other folders)
